feat(agents): upgrade voyager-devops-expert to senior level with longterm research
- Add SHA-pinning table with safe versions for all GitHub Actions (post Trivy supply chain attack 2026-03-19)
- Fix action versions: docker/build-push-action v7, sigstore/cosign-installer v4.1.1
- Mark actions/attest-build-provenance as deprecated — use actions/attest instead
- Stay on gradle/actions/setup-gradle@v4 (v6 has proprietary caching license)
- Remove -XX:+ZGenerational (deprecated/default in Java 25), add -XX:+UseCompactObjectHeaders
- Update CloudNet to RC16: no MINESTOM env type, use MINECRAFT_SERVER; REST API is v3 not v2
- Mark CloudNet issue #1304 as RESOLVED in RC13
- Add RC16 breaking change: Bridge no longer handles Minestom proxy auth
- Add AppCDS setup for 25-47% faster CloudNet cold starts
- Add BuildKit cache mounts for Gradle in Docker
- Add .dockerignore template (currently missing from repo)
- Update Develocity plugin to 4.4.0
- Add Docker security hardening (cap_drop ALL, no-new-privileges, read_only)
- Add OCI annotation standards, Cosign 2.x keyless signing (no COSIGN_EXPERIMENTAL)
- Expand anti-patterns section with CloudNet, CI/CD, Docker, Gradle categories